# pytest-xdist-rate-limit

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  ruff.toml  tox.ini
.github/workflows/: check-version-bump.yml  docs.yml  main.yml  release.yml  validate-docs.yml
docs/: index.md
docs/api/: reference.md
examples/: conftest.py  test_rate_limiter_example.py  test_session_fixture_rate_limiting.py
src/pytest_xdist_rate_limit/: __init__.py  concurrent_fixtures.py  events.py  exceptions.py  pacer_metrics.py  plugin.py  rate.py  rate_limiter_fixture.py  rate_monitor.py  shared_json.py  token_bucket_algorithm.py  token_bucket_rate_limiter.py
tests/: conftest.py  test_examples.py  test_xdist_rate_limit.py
tests/test_concurrent_fixtures/: test_last_worker_race_condition.py  test_shared_json.py  test_shared_json_fixture_factory.py
tests/test_rate_limiter_fixture/: test_rate_limiter_fixture_factory.py
tests/test_shared_json/: test_last_worker_race_condition.py  test_shared_json.py  test_shared_json_fixture_factory.py
tests/test_token_bucket/: test_concurrent_rate_limiting.py  test_double_accounting_bug.py  test_periodic_check.py  test_rate_limit.py  test_rate_limiter.py  test_rate_limiter_fixture_factory.py  test_seconds_waited.py  test_timeout.py
