[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-xdist-rate-limit"
description = "Shared state management and rate limiting for pytest-xdist workers"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Xavier Vergés", email = "github@verg.es" },
]
maintainers = [
    { name = "Xavier Vergés", email = "github@verg.es" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
    "pytest-xdist>=2.0.0",
    "filelock>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist-load-testing @ git+https://github.com/xverges/pytest-xdist-load-testing.git",
]

[project.urls]
Repository = "https://github.com/xverges/pytest-xdist-rate-limit"

[project.entry-points.pytest11]
xdist-rate-limit = "pytest_xdist_rate_limit.plugin"
